--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,13 @@ header {
     font-size: 20px;
 }
 
-section jumbotron {
+head {
     text-align: center;
     background-image: url(newyork.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
     padding: 50px;
-    font-size: 50px
+    font-size: 50px;
 }
 
 h1,h2,h3 {text-align: center;
