--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     margin: auto;
     background-image: url(newyork.jpeg);
     background-size: cover;
-    background-repeat: no-repeat;
+    background-position: center;
     padding: 50px;
     font-size: 50px;
 }
