--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 body {
     background-color: black;
-    color: lime;
+    color: darkblue;
     max-width: 900px;
     margin: auto;
     background-image: url(newyork.jpeg);
     background-size: cover;
     background-position: center;
+    background-repeat: repeat;
     padding: 50px;
     font-size: 50px;
 }
