--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ body {
 header {
     margin: 35px;
     font-size: 20px;
+    color: coral;
+}
+
+nav {
+    color: lightskyblue;
 }
 
 h1,h2,h3 {text-align: center;
